# tomcat

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  yatr.toml
.github/workflows/: ci.yml
dashboard/: app.py  requirements.txt
dashboard/templates/: index.html
docs/: BUILD.md
src/: catdeter.py  pir_test.py  tone_sweep.py
systemd/: catdeter-dashboard.service  catdeter.service
tests/: conftest.py  test_config.py  test_dashboard.py  test_quiet_hours.py
