[project]
name = "tomcat"
version = "0.1.0"
description = "PIR-triggered ultrasonic cat deterrent for Raspberry Pi 4"
requires-python = ">=3.9"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
